[package]
authors = ["Integritee AG"]
description = "The remote attestation registry and verification pallet for integritee blockchains and parachains"
edition = "2018"
homepage = "https://integritee.network/"
license = "Apache-2.0"
name = "pallet-teerex"
repository = "https://github.com/integritee-network/pallet-teerex/"
resolver = "2"
version = "0.9.0"

[workspace]
members = [
  'ias-verify',
]

[dependencies]
hex-literal = {version = "0.3.2", optional = true}
log = {version = "0.4.14", default-features = false}
serde = {features = ['derive'], optional = true, version = '1.0.101'}

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.ias-verify]
default-features = false
path = './ias-verify'

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v3.0.0"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = 'frame-system'
tag = "v3.0.0"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v3.0.0"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v3.0.0"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v3.0.0"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v3.0.0"

[dependencies.timestamp]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-timestamp"
tag = "v3.0.0"

## benchmarking stuff
[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/paritytech/substrate.git"
optional = true
tag = "v3.0.0"

[dependencies.pallet-balances]
default-features = false
git = "https://github.com/paritytech/substrate.git"
optional = true
tag = "v3.0.0"

[dev-dependencies]
env_logger = "0.7.1"
hex-literal = "*"
log = "*"

[dev-dependencies.externalities]
git = "https://github.com/paritytech/substrate.git"
package = "sp-externalities"
tag = "v3.0.0"

[dev-dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate.git"
tag = "v3.0.0"

[dev-dependencies.pallet-balances]
git = "https://github.com/paritytech/substrate.git"
tag = "v3.0.0"

[features]
default = ['std']
runtime-benchmarks = [
  'frame-benchmarking',
  "hex-literal",
  "pallet-balances",
  "timestamp/runtime-benchmarks",
]
std = [
  'serde',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'ias-verify/std',
  'sp-core/std',
  'sp-io/std',
  'sp-runtime/std',
  'sp-std/std',
  'timestamp/std', # benchmarking stuff
  'frame-benchmarking/std',
  "pallet-balances/std",
]
# allow workers to register without remote attestation for dev purposes
skip-ias-check = []
